  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  ! Remember to enable the _free()-function in plugindescr.c (freeAll()) !
  ! as soon as the next release of GnuCash is out !                      !
  ------------------------------------------------------------------------

2005-12-06   Christian Stimming <stimming@tuhh.de>

	* src/gwenhywfar.c: Use windows registry and GWEN_PathManager for
	all path lookups in gwen. Replaces literal LOCALEDIR macro and
	LIBSUFFIX macro for lib64 library paths.

2005/12/05: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- temporarily disabled call to GWEN_PluginDescription_List2_free() from
  within GWEN_PluginDescription_List2_freeAll(): This causes Gnucash to
  crash because it contains a workaround for an old memory leak which had been
  fixed in the last release of Gwen. However, the bugfix in gwen and the
  workaround in Gnucash together lead to a double free which causes the
  program to crash.
  As soon as the next release of Gnucash is out we reenable this function
  call thus finally fixing this bug.
- completed documentation of pathmanager


2005-12-05   Christian Stimming <stimming@tuhh.de>

	* src/gwenhywfar.c: Register GWEN_PathManager entries for
	localedir and libdir as well. Intended to prepare for integration
	of autopackage's binreloc tools, hence providing even more
	platform independence.

===========================================================================
MARK: released gwenhywfar-1.99.1 (2005/12/01)
===========================================================================


2005-11-28  Christian Stimming  <stimming@tuhh.de>

	* src/gwenhywfar.c: Add header define for x86_64 libdir suffix.


2005/11/28: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- worked on nl_ssl: 
  - now GWEN_NetLayerSsl_Disconnect() also disconnects the
    SSL layer, not only the underlying layer